--- a/main.css
+++ b/main.css
@@ -1,3 +1,12 @@
+body {
+    font-family: "Kosugi Maru", sans-serif;
+    font-weight: 500;
+    padding-top: 8vw;
+    font-size: 60%;
+}
+
+
+
 header {
     position: relative;
     height: 100%;
@@ -23,19 +32,22 @@ nav ul {
     padding: 0;
 }
 
-nav li{
+nav li {
     list-style: none;
     display: inline-block;
     min-width: 90px;
 }
+
 .sns li {
     width: auto;
     padding: 10px;
 }
+
 .item li {
     width: 15%;
     padding: 10px;
 }
+
 .item li:not(:last-child) {
     border-right: 2px solid #ddd;
 }
@@ -44,6 +56,7 @@ nav li{
     background-color: #005CAC;
     transition: background-color .7s ease 0s;
 }
+
 .item li:hover a {
     color: #ddd;
     transition: color .2s ease 0s;
@@ -53,6 +66,7 @@ nav a {
     text-decoration: none;
     color: #005CAC;
 }
+
 .sns a {
     text-decoration: none;
     color: #000000;
@@ -64,7 +78,6 @@ nav a {
     align-items: center;
     width: 30px;
     height: 30px;
-    background-color: #3f7c92;
     display: none;
     flex-direction: column;
     cursor: pointer;
@@ -85,9 +98,11 @@ nav a {
 .active .hamburger-line:nth-child(1) {
     transform: translateY(10px) rotate(45deg);
 }
+
 .active .hamburger-line:nth-child(2) {
     opacity: 0;
 }
+
 .active .hamburger-line:nth-child(3) {
     transform: translateY(-10px) rotate(-45deg);
 }
@@ -96,23 +111,26 @@ nav a {
 /* メニューのスタイル */
 .menu {
     display: flex;
-    flex-wrap:wrap;
+    flex-wrap: wrap;
     width: 80%;
     justify-content: space-around;
     background-color: #f1f1f1;
 }
-.logo{
+
+.logo {
     width: 20%;
     height: 8vw;
     background-image: url(./pic/ロゴ.png);
     background-size: 95%;
     background-position: top right;
-    background-repeat:no-repeat;
+    background-repeat: no-repeat;
 }
+
 .sns {
     width: 100%;
 }
-.item{
+
+.item {
     width: 100%;
 }
 
@@ -130,13 +148,14 @@ nav a {
     0% {
         opacity: 0;
     }
+
     100% {
         opacity: 1;
     }
 }
 
 /* キービジュアル */
-.keyvisual{
+.keyvisual {
     margin: auto;
     margin-bottom: 46px;
     width: 100%;
@@ -145,14 +164,15 @@ nav a {
     overflow: hidden;
     position: relative;
 }
+
 .keyvisual img {
     width: inherit;
     height: inherit;
     margin: 0;
     padding: 0;
     object-fit: cover;
-  }
-  
+}
+
 .keyvisual::after {
     content: "";
     position: absolute;
@@ -163,31 +183,94 @@ nav a {
     background-image: url(./pic/wave.png);
     background-size: 100%;
     background-position: center bottom;
-    background-repeat:no-repeat;
+    background-repeat: no-repeat;
 }
 
-.slide > :first-child {
-    animation-name: slide-4;     /* 作成したキーフレームを使う */
-    animation-duration: 15s;    /* アニメーション全体を5秒にする */
-    animation-delay: 2s;       /* 直ちにアニメーション開始する */
-    animation-iteration-count: infinite; /* 永遠にアニメーションする */
-    transition-timing-function:ease-in-out;
+.slide> :first-child {
+    animation-name: slide-4;
+    /* 作成したキーフレームを使う */
+    animation-duration: 15s;
+    /* アニメーション全体を5秒にする */
+    animation-delay: 2s;
+    /* 直ちにアニメーション開始する */
+    animation-iteration-count: infinite;
+    /* 永遠にアニメーションする */
+    transition-timing-function: ease-in-out;
 }
 
 @keyframes slide-4 {
-    0% { margin-left: 0; }
-    33% { margin-left: -100%; }
-    66% { margin-left: -200%; }
-    100% { margin-left: -300%; }
-  }
+    0% {
+        margin-left: 0;
+    }
+
+    33% {
+        margin-left: -100%;
+    }
+
+    66% {
+        margin-left: -200%;
+    }
+
+    100% {
+        margin-left: -300%;
+    }
+}
+
+.about {
+    width: 80vw;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 40px auto;
+    color: #005CAC;
+}
+
+.important {
+    width: 80vw;
+    margin: auto;
+    text-align: center;
+    margin: 40px auto;
+    padding: 20px;
+    color: #da4d4d;
+    background-color: #da4d4d2d;
+    border-radius: 20px;
+}
+
+.important p {
+    font-size: 2vw;
+    margin: 0 0 15px 0;
+    font-weight: bold;
+}
+
+.important ul {
+    margin: 0;
+    padding: 0;
+}
+
+.important li {
+    list-style: none;
+    text-align: left;
+    font-size: 1.3vw;
+    margin: 5px 0;
+}
+
+
+
+
+
+
+
+
 
 @media screen and (max-width: 480px) {
+
     /* 480px以下に適用されるCSS（スマホ用） */
     .menu {
         display: none;
         flex-direction: column;
         position: fixed;
-        top: 10vw;
+        top: 12vw;
         left: 0;
         width: 100%;
         height: 100vh;
@@ -195,22 +278,37 @@ nav a {
         justify-content: flex-start;
     }
 
+    .logo {
+        width: 30%;
+        height: 12vw;
+    }
+
+
+    nav {
+        height: 12vw;
+    }
+
     nav li {
         text-align: center;
     }
-    .sns{
+
+    .sns {
         order: 1;
     }
+
     .sns li {
         width: 70%;
         text-align: left;
     }
+
     .sns li:not(:last-child) {
         border-bottom: 2px solid #ddd;
     }
-    .item{
+
+    .item {
         order: 0;
     }
+
     .item li {
         width: 70%;
         text-align: left;
@@ -223,5 +321,23 @@ nav a {
 
     .hamburger-menu {
         display: flex;
+    }
+
+
+    h1 {
+        font-size: 15px;
+    }
+
+    .important {
+        padding: 10px;
+        border-radius: 10px;
+    }
+
+    .important li {
+        font-size: 3vw;
+    }
+
+    .important p {
+        font-size: 15px;
     }
 }
