--- a/main.css
+++ b/main.css
@@ -269,22 +269,36 @@ nav a {
     margin: 0;
     font-weight: bold;
 }
-.wave {
+.wave img{
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 84px;
-    background-image: url(./pic/wave.png);
-    background-size: 100%;
-    background-position: center bottom;
-    background-repeat: no-repeat;
 }
-.picup{
+/*本日の営業時間*/
+.today-info{
     position: relative;
     padding-bottom: 84px;
     background-color: #b9d1e6;
 }
+.today-box{
+    width: 80vw;
+    margin: 1vw auto;
+    background-color: #f1f1f1;
+    border-radius: 20px;
+    padding: 1vw;
+}
+.today-box-title{
+    background-color: #5da6e6;
+    color: #f1f1f1;
+    border-radius: 10px;
+}
+
+.today-box-min{
+    font-size: 1.5vw;
+    font-weight:lighter;
+}
+
 
 /*イベント*/
 .event{
@@ -404,6 +418,23 @@ nav a {
 /*block要素*/
 .content p {
     font-size: 6vw;
+}
+
+/*本日の営業時間*/
+.today-info{
+    padding-bottom: 84px;
+}
+.today-box{
+    margin: 2vw auto;
+    border-radius: 10px;
+    padding: 2vw;
+}
+.today-box-title{
+    border-radius: 5px;
+}
+.today-box-min{
+    display:block;
+    font-size: 15px;
 }
 
     /*フロアマップ*/
