--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@ body {
     font-family: "Kosugi Maru", sans-serif;
     font-weight: 500;
     padding-top: 8vw;
-    font-size: 60%;
+    font-size: 65%;
     background-color: #f1f1f1;
 }
 
@@ -258,7 +258,6 @@ nav a {
 
 /*block要素*/
 .content{
-    background-color: yellowgreen;
     width: 100%;
     margin: auto;
     text-align: center;
@@ -285,11 +284,13 @@ nav a {
     width: 80vw;
     margin: 1vw auto;
     background-color: #f1f1f1;
+    color: #005CAC;
     border-radius: 20px;
     padding: 1vw;
+    border: 3px solid #005CAC;
 }
 .today-box-title{
-    background-color: #5da6e6;
+    background-color: #005CAC;
     color: #f1f1f1;
     border-radius: 10px;
 }
