--- a/main.css
+++ b/main.css
@@ -273,6 +273,7 @@ nav a {
 
 .about {
     width: 80vw;
+    max-width: 1200px;
     margin: auto;
     display: flex;
     align-items: center;
@@ -288,6 +289,7 @@ nav a {
     background-color: #f8684427;
     border-radius: 20px;
     width: 80vw;
+    max-width: 1200px;
     height: auto;
     text-align: center;
     margin: 40px auto 100px auto;
@@ -341,6 +343,7 @@ nav a {
 
 .today-box {
     width: 80vw;
+    max-width: 1200px;
     margin: 0 auto 2vw auto;
     background-color: #f1f1f1;
     border-radius: 20px;
@@ -376,6 +379,7 @@ nav a {
     margin: auto;
     position: relative;
     width: 80vw;
+    max-width: 1200px;
 }
 
 .bottom-box {
@@ -472,6 +476,7 @@ nav a {
     display: flex;
     justify-content: space-between;
     width: 80vw;
+    max-width: 1200px;
 }
 
 .price-box-item {
@@ -506,6 +511,12 @@ nav a {
 }
 
 /*フロアマップ*/
+.factory-box{
+    margin: auto;
+    position: relative;
+    width: 80vw;
+    max-width: 1200px;
+}
 .factory-info {
     padding: 0 10%;
     position: relative;
@@ -541,47 +552,94 @@ nav a {
     border-radius: 20px;
 }
 
-/*見どころ*/
+/*フロアの見どころ*/
 .highlights {
     position: relative;
     background-color: #559691;
     color: #f1f1f1;
     padding-bottom: 100px;
 }
+
 .highlights-box {
     margin: auto;
     position: relative;
     width: 80vw;
-    background-color: yellowgreen;
+    max-width: 1200px;
 }
 
 .highlights-box-item {
     width: 100%;
     margin-bottom: 1vw;
     position: relative;
+    text-align: left;
+}
+
+.highlights-box-item:nth-child(even) {
     display: flex;
     justify-content: space-between;
-    background-color: #7a2727;
+    flex-direction: row-reverse;
+    /*左右入れ替え*/
+}
+
+.highlights-box-item:nth-child(odd) {
+    display: flex;
+    justify-content: space-between;
 }
 
 .highlights-box-A {
     width: 50%;
-    background-color: #2A6A65;
     color: #f1f1f1;
 }
-.highlights-box-A-text{
+
+.highlights-box-A-text {
     font-size: 20px;
+    text-align: left;
 }
 
 .highlights-box-B {
     width: 45%;
-    background-color: rgb(78, 78, 0);
 }
+
 .highlights-box-B img {
     width: 100%;
     border-radius: 20px;
 }
 
+/*施設の見どころ*/
+.Luminaphosphora {
+    position: relative;
+    background-color: #2A6A65;
+    color: #f1f1f1;
+    padding-bottom: 100px;
+}
+
+.Lumina-box {
+    margin: auto;
+    position: relative;
+    width: 80vw;
+    max-width: 1200px;
+}
+
+.Lumina-box-A {
+    color: #f1f1f1;
+}
+.Lumina-box-A div{
+    border-bottom: 3px solid #559691;
+    margin-bottom: 2vw;
+}
+.Lumina-box-A-text {
+    font-size: 20px;
+}
+
+.Lumina-box-B {
+    margin: auto;
+    width: 70%;
+}
+
+.Lumina-box-B img {
+    width: 100%;
+    border-radius: 20px;
+}
 @media screen and (max-width: 1265px) {
 
     h1 {
@@ -657,7 +715,9 @@ nav a {
         padding: 10px;
         border-radius: 10px;
     }
-
+    .important li {
+        font-size: 12px;
+    }
 
     /*block要素*/
     /*本日の営業時間*/
@@ -749,6 +809,35 @@ nav a {
 
     .footer-box2 p {
         font-size: 10px;
+    }
+
+    /*施設*/
+    .highlights-box-item {
+        margin-bottom: 5vw;
+    }
+
+    .highlights-box-item:nth-child(even) {
+        display: block;
+    }
+
+    .highlights-box-item:nth-child(odd) {
+        display: block;
+    }
+
+    .highlights-box-A {
+        width: 100%;
+    }
+
+    .highlights-box-A-text {
+        font-size: 15px;
+    }
+
+    .highlights-box-B {
+        width: 100%;
+    }
+
+    .highlights-box-B img {
+        border-radius: 10px;
     }
 
 }
